--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "node-ws-test",
   "version": "0.0.1",
+  "main": "server.js",
   "repository": {
     "type": "git",
     "url": "https://github.com/heroku-examples/node-ws-test.git"
   },
   "dependencies": {
     "express": "^4.4.5",
-    "ws": "0.4.x"
+    "ws": "^7.0.0"
   },
   "engines": {
     "node": "0.10.x"
