--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "express": "^4.4.5",
     "ws": "^7.0.0"
   },
+  "engines": {
+    "node": ">=10.0.0",
+    "npm": ">=6.0.0"
+  },
   "scripts": {
     "start": "node index.js"
   }
